<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:fillViewport="true"
            tools:context=".LoginActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:inputType="textEmailAddress"
                android:hint="@string/login_email"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space" android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextPassword"/>

        <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/button"/>
        <Button
                android:id="@+id/button"
                android:text="@string/login_sign_in"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/login_text_xl_size"
                android:background="@drawable/button_ripple_bg"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textViewForgotPassword"/>
        <TextView
                android:id="@+id/textViewForgotPassword"
                android:text="@string/login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:textColor="@color/colorSecondaryText"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonLogInGoogle"/>
        <Button
                android:id="@+id/buttonLogInGoogle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:text="@string/login_sign_in_google"
                android:textColor="@color/colorPrimaryText"
                android:background="@drawable/button_ripple_google"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"/>
        <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_xl_height"
                android:text="@string/login_create_account"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/login_text_size"
                android:background="@drawable/button_ripple"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>